Map: fixed overflowing on tabs in mobile size

--- a/app/component/map/map.scss
+++ b/app/component/map/map.scss
@@ -61,7 +61,7 @@ div.leaflet-bottom.leaflet-left div.leaflet-control-zoom {
 }
 
 div.leaflet-container {
-  position: relative;
+  position: absolute;
   flex: 1;
   width: 100%;
   height: 100%;
